examples/resolver/primitives/pass/io_write_and_eprint.axo
const fd = 1
const line = "hello"
const wrote = write(fd, line)
eprint(wrote)
eprint_raw("\n")
