examples/resolver/primitives/fail/read_line_arity.axo
const line = read_line("bad")
print(line)
